# FastAPI-Test-assignment-for-Patres

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_01_26_2313-3ac4932ded8b_test.py  2025_01_27_2117-63e7663b1442_create_table_users_and_role_corrections.py  2025_01_29_2215-1cae33cedb2c_create_table_books_author_and_secondary_.py  2025_01_30_2007-2b205cb9b097_add_in_table_books_checkconstraint_and_.py
app/: config.py  main.py
app/api/: crud.py  dependencies.py  schemes.py  views.py
app/auth/: auth_jwt.py  crud.py  dependencies.py  schemes.py  utils.py  views.py
app/models/: base.py  base_dao.py  db_helper.py
test/: test_main.py
