[tool.poetry]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
pydantic-settings = "^2.7.1"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
bcrypt = "^4.2.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
alembic = "^1.14.0"
markdown2 = "^2.5.2"
orjson = "^3.10.14"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

